improved sstd helper script